@@ -2,6 +2,11 @@ CHANGELOG
 =========
 
 
+2021-12-10
+----------
+### Changelog extractor
+* Ignoring hidden files: allow ./
+
 2021-11-15
 ----------
 ### Changelog extractor
